[package]
name = "lair_keystore_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lair_keystore_api = "0.3.0"
url = "2.2"
dirs = "5.0.1"
toml = "0.7.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"